--- a/.github/workflows/antonin_cedric_paul.yml
+++ b/.github/workflows/antonin_cedric_paul.yml
@@ -1,1 +1,22 @@
 
+name: Workflow Simple Bonjour
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+  workflow_dispatch: # Permet de lancer manuellement le workflow
+
+jobs:
+  display-message:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Récupérer le code
+        uses: actions/checkout@v3
+
+      - name: Afficher un message
+        run: echo "Bonjour, Workflow !"
