--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,39 +1,35 @@
 name: Pytest CI
 
-# Déclenche le workflow lors des push ou pull requests sur la branche 'main'
 on:
   push:
     branches:
       - main
   pull_request:
+    branches:
+      - main
 
 jobs:
   test:
-    runs-on: ubuntu-latest # Utilise une machine virtuelle Ubuntu
+    runs-on: ubuntu-latest
 
     steps:
-    # Étape 1 : Cloner le dépôt
-    - name: Checkout code
+    - name: Cloner le dépôt
       uses: actions/checkout@v3
 
-    # Étape 2 : Configurer Python
-    - name: Set up Python
+    - name: Configurer Python
       uses: actions/setup-python@v3
       with:
-        python-version: '3.9' # Changez la version si nécessaire
+        python-version: '3.x'
 
-    # Étape 3 : Installer les dépendances
-    - name: Install dependencies
+    - name: Installer les dépendances
       run: |
-        python -m pip install --upgrade pip
+        pip install --upgrade pip
         pip install -r requirements.txt
 
-    # Étape 4 : Exécuter les tests avec pytest
-    - name: Run tests
+    - name: Lancer les tests avec pytest
       run: pytest --html=report.html --self-contained-html
 
-    # Étape 5 : Uploader le rapport de tests comme artefact
-    - name: Upload test report
+    - name: Télécharger le rapport HTML
       uses: actions/upload-artifact@v3
       with:
         name: pytest-report
